crates/amaru-observability/macros/tests/ui/compile_fail/wrong_field_type.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/wrong_field_type.rs:36:17
   |
21 | / define_local_schemas! {
22 | |     test {
23 | |         sub {
24 | |             /// Test schema for wrong field type test
...  |
32 | | }
   | |_- arguments to this function are incorrect
...
36 |       let _span = trace_span!(test::sub::SCHEMA, first = &first, second = 2_i32, third = 3_u64);
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&u64`, found `&i32`
   |
   = note: expected reference `&u64`
              found reference `&i32`
note: closure parameter defined here
  --> tests/ui/compile_fail/wrong_field_type.rs:21:1
   |
21 | / define_local_schemas! {
22 | |     test {
23 | |         sub {
24 | |             /// Test schema for wrong field type test
...  |
32 | | }
   | |_^
...
36 |       let _span = trace_span!(test::sub::SCHEMA, first = &first, second = 2_i32, third = 3_u64);
   |                   ----------------------------------------------------------------------------- in this macro invocation
   = note: this error originates in the macro `trace_span` (in Nightly builds, run with -Z macro-backtrace for more info)
